force-app/main/default/objects/Surgical_Booking__c/Surgical_Booking__c.object-meta.xml
<CustomObject>
    <description>Created records for patients who are indicated for surgery for administrative team to complete workflow</description>
    <label>Surgical Booking</label>
    <nameField>
        <label>Surgical Bookings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surgical Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>