force-app/main/default/objects/Surgical_Booking__c/fields/Active_Alternative_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Active_Alternative_Treatment__c</fullName>
    <label>Active Alternative Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Conservative_Modalities</valueSetName>
    </valueSet>
</CustomField>