force-app/main/default/objects/Surgical_Booking__c/fields/Anchors__c.field-meta.xml
<CustomField>
    <fullName>Anchors__c</fullName>
    <label>Anchors</label>
    <type>TextArea</type>
</CustomField>