force-app/main/default/objects/Surgical_Booking__c/fields/Authorization_Notes__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Notes__c</fullName>
    <label>Authorization Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>