force-app/main/default/objects/Surgical_Booking__c/fields/Authorization_Sta__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Sta__c</fullName>
    <label>Authorization Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Authorization_Status</valueSetName>
    </valueSet>
</CustomField>