force-app/main/default/objects/Surgical_Booking__c/fields/Booking_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Booking_Sheet__c</fullName>
    <label>Booking Sheet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workflow_Status</valueSetName>
    </valueSet>
</CustomField>