force-app/main/default/objects/Surgical_Booking__c/fields/Cardiac_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Cardiac_Clearance__c</fullName>
    <label>Cardiac Clearance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workflow_Status</valueSetName>
    </valueSet>
</CustomField>