force-app/main/default/objects/Surgical_Booking__c/fields/Chest_x_ray__c.field-meta.xml
<CustomField>
    <fullName>Chest_x_ray__c</fullName>
    <label>Chest x-ray</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workflow_Status</valueSetName>
    </valueSet>
</CustomField>