force-app/main/default/objects/Surgical_Booking__c/fields/Co_Surgeon_Assist_Billing__c.field-meta.xml
<CustomField>
    <fullName>Co_Surgeon_Assist_Billing__c</fullName>
    <label>Co-Surgeon/Assist Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workflow_Status</valueSetName>
    </valueSet>
</CustomField>