force-app/main/default/objects/Surgical_Booking__c/fields/EKG__c.field-meta.xml
<CustomField>
    <fullName>EKG__c</fullName>
    <label>EKG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workflow_Status</valueSetName>
    </valueSet>
</CustomField>