force-app/main/default/objects/Surgical_Booking__c/fields/Foot_Ankle_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Foot_Ankle_Equipment__c</fullName>
    <label>Foot &amp; Ankle Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Foot_Ankle_Equipment</valueSetName>
    </valueSet>
</CustomField>