force-app/main/default/objects/Surgical_Booking__c/fields/Implants__c.field-meta.xml
<CustomField>
    <fullName>Implants__c</fullName>
    <label>Implants</label>
    <type>TextArea</type>
</CustomField>