force-app/main/default/objects/Surgical_Booking__c/fields/Instumentation__c.field-meta.xml
<CustomField>
    <fullName>Instumentation__c</fullName>
    <label>Instumentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workflow_Status</valueSetName>
    </valueSet>
</CustomField>