force-app/main/default/objects/Surgical_Booking__c/fields/Labs_Urine__c.field-meta.xml
<CustomField>
    <fullName>Labs_Urine__c</fullName>
    <label>Labs/Urine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workflow_Status</valueSetName>
    </valueSet>
</CustomField>