force-app/main/default/objects/Surgical_Booking__c/fields/Length_of_Surgery__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Surgery__c</fullName>
    <label>Length of Surgery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Length_of_Surgery</valueSetName>
    </valueSet>
</CustomField>