force-app/main/default/objects/Surgical_Booking__c/fields/Medical_Clearance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Medical_Clearance_Notes__c</fullName>
    <label>Medical Clearance Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>