force-app/main/default/objects/Surgical_Booking__c/fields/Medical_Clearance_Status__c.field-meta.xml
<CustomField>
    <fullName>Medical_Clearance_Status__c</fullName>
    <label>Medical Clearance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medical_Clearance</valueSetName>
    </valueSet>
</CustomField>