force-app/main/default/objects/Surgical_Booking__c/fields/Name_of_Assist__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Assist__c</fullName>
    <label>Name of Assist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>John Cho</fullName>
            </value>
            <value>
                <fullName>Joseph Simone</fullName>
            </value>
            <value>
                <fullName>Gerald Vernon</fullName>
            </value>
            <value>
                <fullName>Diego Herrera</fullName>
            </value>
            <value>
                <fullName>Peter Diapolo</fullName>
            </value>
            <value>
                <fullName>Georgio Rotoli</fullName>
            </value>
            <value>
                <fullName>Gino Chiapetta</fullName>
            </value>
            <value>
                <fullName>Aaron Greenburg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>