force-app/main/default/objects/Surgical_Booking__c/fields/Neuro_monitoring__c.field-meta.xml
<CustomField>
    <fullName>Neuro_monitoring__c</fullName>
    <label>Neuro-monitoring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workflow_Status</valueSetName>
    </valueSet>
</CustomField>