force-app/main/default/objects/Surgical_Booking__c/fields/Op_report__c.field-meta.xml
<CustomField>
    <fullName>Op_report__c</fullName>
    <label>Op report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workflow_Status</valueSetName>
    </valueSet>
</CustomField>