force-app/main/default/objects/Surgical_Booking__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surgical Bookings</relationshipLabel>
    <relationshipName>Surgical_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>