force-app/main/default/objects/Surgical_Booking__c/fields/Patient_Status__c.field-meta.xml
<CustomField>
    <fullName>Patient_Status__c</fullName>
    <label>Patient Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient Considering</fullName>
            </value>
            <value>
                <fullName>Patient Consents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>