force-app/main/default/objects/Surgical_Booking__c/fields/PCP__c.field-meta.xml
<CustomField>
    <fullName>PCP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PCP</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Uh oh. It doesn&apos;t appear that the contact your looking for is in Salesforce as a Provider contact.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Medical Clearances</relationshipLabel>
    <relationshipName>Medical_Clearances</relationshipName>
    <type>Lookup</type>
</CustomField>