force-app/main/default/objects/Surgical_Booking__c/fields/PCP_Clearance__c.field-meta.xml
<CustomField>
    <fullName>PCP_Clearance__c</fullName>
    <label>PCP Clearance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workflow_Status</valueSetName>
    </valueSet>
</CustomField>