force-app/main/default/objects/Surgical_Booking__c/fields/PIP_Ledger__c.field-meta.xml
<CustomField>
    <fullName>PIP_Ledger__c</fullName>
    <label>PIP Ledger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workflow_Status</valueSetName>
    </valueSet>
</CustomField>