force-app/main/default/objects/Surgical_Booking__c/fields/Post_Op_Meds__c.field-meta.xml
<CustomField>
    <fullName>Post_Op_Meds__c</fullName>
    <label>Post-Op Meds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workflow_Status</valueSetName>
    </valueSet>
</CustomField>