force-app/main/default/objects/Surgical_Booking__c/fields/Pre_Op_Call__c.field-meta.xml
<CustomField>
    <fullName>Pre_Op_Call__c</fullName>
    <label>Pre-Op Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workflow_Status</valueSetName>
    </valueSet>
</CustomField>