force-app/main/default/objects/Surgical_Booking__c/fields/Primary_Dx__c.field-meta.xml
<CustomField>
    <fullName>Primary_Dx__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Dx</label>
    <referenceTo>Diagnosis_Code__c</referenceTo>
    <relationshipLabel>Surgical Bookings Primary Dx</relationshipLabel>
    <relationshipName>Surgical_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>