force-app/main/default/objects/Surgical_Booking__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedure</label>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Surgical Bookings</relationshipLabel>
    <relationshipName>Surgical_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>