force-app/main/default/objects/Surgical_Booking__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>CareCloud_Information__c</referenceTo>
    <relationshipLabel>Surgical Bookings</relationshipLabel>
    <relationshipName>Surgical_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>