force-app/main/default/objects/Surgical_Booking__c/fields/Provider_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Provider_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Checklist</label>
    <referenceTo>Provider_Checklist__c</referenceTo>
    <relationshipLabel>Surgical Bookings</relationshipLabel>
    <relationshipName>Surgical_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>