force-app/main/default/objects/Surgical_Booking__c/fields/Provider_Old__c.field-meta.xml
<CustomField>
    <fullName>Provider_Old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Uh oh.  It looks like the user you are looking for is not tagged as an MD.  Please alert your awesome Salesforce Administrator to update the title on the user record to MD.</errorMessage>
        <filterItems>
            <field>User.Title</field>
            <operation>equals</operation>
            <value>MD</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Surgical_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>