force-app/main/default/objects/Surgical_Booking__c/fields/Secondary_Dx__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Dx__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Dx</label>
    <referenceTo>Diagnosis_Code__c</referenceTo>
    <relationshipLabel>Surgical Bookings Secondary Dx</relationshipLabel>
    <relationshipName>Surgical_Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>