force-app/main/default/objects/Surgical_Booking__c/fields/Sedation__c.field-meta.xml
<CustomField>
    <fullName>Sedation__c</fullName>
    <label>Sedation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sedation</valueSetName>
    </valueSet>
</CustomField>