force-app/main/default/objects/Surgical_Booking__c/fields/Shoulder_or_Knee_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Shoulder_or_Knee_Equipment__c</fullName>
    <label>Orthopedic Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Orthopedic_Equipment</valueSetName>
    </valueSet>
</CustomField>