force-app/main/default/objects/Surgical_Booking__c/fields/Spine_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Spine_Equipment__c</fullName>
    <label>Spine Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Spine_Equipment</valueSetName>
    </valueSet>
</CustomField>