force-app/main/default/objects/Surgical_Booking__c/fields/Stryker_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Stryker_Equipment__c</fullName>
    <label>Stryker Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stryker_Equipment</valueSetName>
    </valueSet>
</CustomField>