force-app/main/default/objects/Surgical_Booking__c/fields/Surgeon_OLD__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_OLD__c</fullName>
    <label>Surgeon OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Providers</valueSetName>
    </valueSet>
</CustomField>