force-app/main/default/objects/Surgical_Booking__c/fields/Surgical_Booking_Notes__c.field-meta.xml
<CustomField>
    <fullName>Surgical_Booking_Notes__c</fullName>
    <label>Surgical Booking Notes</label>
    <type>TextArea</type>
</CustomField>