force-app/main/default/objects/Surgical_Booking__c/fields/Surgical_Indication__c.field-meta.xml
<CustomField>
    <fullName>Surgical_Indication__c</fullName>
    <label>Surgical Indication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Surgical_Indications</valueSetName>
    </valueSet>
</CustomField>