force-app/main/default/objects/Surgical_Booking__c/fields/Surgical_Location__c.field-meta.xml
<CustomField>
    <fullName>Surgical_Location__c</fullName>
    <label>Surgical Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Surgical_Locations</valueSetName>
    </valueSet>
</CustomField>