force-app/main/default/objects/Surgical_Booking__c/fields/Surgical_Position__c.field-meta.xml
<CustomField>
    <fullName>Surgical_Position__c</fullName>
    <label>Surgical Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Surgical_Position</valueSetName>
    </valueSet>
</CustomField>