force-app/main/default/objects/Surgical_Booking__c/fields/Sx_Billing__c.field-meta.xml
<CustomField>
    <fullName>Sx_Billing__c</fullName>
    <label>Sx Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workflow_Status</valueSetName>
    </valueSet>
</CustomField>