force-app/main/default/objects/Surgical_Booking__c/fields/Sx_Co_surgeon_Assist__c.field-meta.xml
<CustomField>
    <fullName>Sx_Co_surgeon_Assist__c</fullName>
    <label>Sx Co-surgeon/Assist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workflow_Status</valueSetName>
    </valueSet>
</CustomField>