force-app/main/default/objects/Surgical_Booking__c/fields/SX_Verification__c.field-meta.xml
<CustomField>
    <fullName>SX_Verification__c</fullName>
    <label>Sx Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workflow_Status</valueSetName>
    </valueSet>
</CustomField>