force-app/main/default/objects/Surgical_Booking__c/fields/Sxl_Auth__c.field-meta.xml
<CustomField>
    <fullName>Sxl_Auth__c</fullName>
    <label>Sxl Auth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Workflow_Status</valueSetName>
    </valueSet>
</CustomField>