force-app/main/default/objects/Surgical_Booking__c/fields/Tertiary_Dx__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Dx__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tertiary Dx</label>
    <referenceTo>Diagnosis_Code__c</referenceTo>
    <relationshipLabel>Surgical Bookings Tertiary Dx</relationshipLabel>
    <relationshipName>Surgical_Bookings2</relationshipName>
    <type>Lookup</type>
</CustomField>