force-app/main/default/objects/Surgical_Booking__c/fields/WC_NJ_Resident__c.field-meta.xml
<CustomField>
    <fullName>WC_NJ_Resident__c</fullName>
    <label>WC - NJ Resident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>