force-app/main/default/objects/Surgical_Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Surgical_Indication__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>