force-app/main/default/objects/Surgical_Booking__c/listViews/Pending_Surgical_Bookings.listView-meta.xml
<ListView>
    <fullName>Pending_Surgical_Bookings</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Provider__c</columns>
    <columns>Procedure__c</columns>
    <columns>Authorization_Sta__c</columns>
    <columns>Medical_Clearance_Status__c</columns>
    <columns>Procedure_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Pending</value>
    </filters>
    <label>Pending Surgical Bookings</label>
</ListView>