force-app/main/default/objects/Surgical_Booking__c/listViews/Surgical_Booking_Surgical_Booking.listView-meta.xml
<ListView>
    <fullName>Surgical_Booking_Surgical_Booking</fullName>
    <filterScope>Queue</filterScope>
    <label>New Surgical Bookings</label>
    <queue>New_Surgical_Bookings</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>